--- a/index.html
+++ b/index.html
@@ -1,23 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Weather Dial Privacy Policy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy – Weather Dial</title>
   <style>
-    body { font-family: sans-serif; padding: 2rem; line-height: 1.6; max-width: 700px; margin: auto; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 2rem;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1, h2 {
+      color: #111;
+    }
+    a {
+      color: #007aff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Weather Dial</strong> does not collect, store, or share any personal user data.</p>
+  <p><strong>Effective Date:</strong> [Insert Date]</p>
 
-  <h2>Data Sources</h2>
-  <p>The app retrieves weather data from trusted third-party APIs such as Apple Weather, Google, AccuWeather, Microsoft, and the National Weather Service. We do not track or store your usage or location.</p>
+  <p>
+    At <strong>Weather Dial</strong>, your privacy is important to us. This privacy policy explains how our app handles your data. In short:
+    <strong>we don’t collect any personal information—period.</strong>
+  </p>
 
-  <h2>Third-Party Services</h2>
-  <p>Weather Dial may link to external services to display weather data. Please refer to those providers for their privacy policies.</p>
+  <h2>Information We Do Not Collect</h2>
+  <ul>
+    <li>We do <strong>not collect</strong>, store, or transmit any personal data.</li>
+    <li>We do <strong>not collect</strong> your name, email, location, or IP address.</li>
+    <li>We do <strong>not use</strong> any analytics tools (such as Google Analytics or App Tracking).</li>
+    <li>We do <strong>not use</strong> advertising SDKs or tracking technologies.</li>
+    <li>We do <strong>not sell or share</strong> any user information—because we don’t collect any.</li>
+  </ul>
 
-  <h2>Contact</h2>
-  <p>If you have any questions about this Privacy Policy, you can contact us at <a href="mailto:support@weatherdial.app">support@weatherdial.app</a>.</p>
+  <h2>Weather Data</h2>
+  <p>
+    Weather Dial displays forecast information by retrieving data from trusted third-party weather providers, including:
+  </p>
+  <ul>
+    <li>Apple Weather</li>
+    <li>Google</li>
+    <li>AccuWeather</li>
+    <li>Microsoft</li>
+    <li>National Weather Service (NWS)</li>
+  </ul>
+  <p>
+    These providers may have their own privacy practices when delivering weather data. We do <strong>not control or transmit any personal information</strong> to them.
+  </p>
+
+  <h2>Children’s Privacy</h2>
+  <p>
+    Weather Dial does not knowingly collect any information from children. The app is safe for all ages and complies with applicable children’s privacy regulations.
+  </p>
+
+  <h2>Changes to This Policy</h2>
+  <p>
+    If we ever change the way we handle your data, we will update this policy and notify you directly within the app before any new practices go into effect.
+  </p>
+
+  <h2>Contact Us</h2>
+  <p>
+    If you have any questions about this privacy policy, feel free to contact us:
+  </p>
+  <p>
+    <strong>Email:</strong> <a href="mailto:support@weatherdial.app">support@weatherdial.app</a><br />
+    <strong>Website:</strong> <a href="https://weatherdial.github.io/privacy/">https://weatherdial.github.io/privacy/</a>
+  </p>
 </body>
 </html>
